--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" id="HTML">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -11,7 +10,8 @@
     <title>TyT - Make you type faster.</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:500" rel="stylesheet">
-    <style>
+    <iframe id="css" src="style.css" hidden="hidden"></iframe>
+    <style id="style">
         *{margin:0;padding:0;background-color:black;}
         #loading{
             position: fixed;
@@ -216,5 +216,4 @@
 <script src="./dictionary_full.js"></script>
 <script src="./dictionary_simple.js"></script>
 <script src="./tytjs.js"></script>
-
 </html>
