improved ui & fixed bug

--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
 
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="row-outer">
                 <br>
-                <span id="tpyestatus" class="small">...</span><span class="small" hidden>Timer:<span id="timer"></span>&nbsp;</span>
+                <span id="tpyestatus" class="small">...</span>
                 <div id="prc_main" class="row">
                     <div id="prc_tip" class="tip_dic_simple" hidden="hidden"></div>
                     <div id="prc_text"></div>
