--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </footer>
 </body>
 <script src="./wordlist.js"></script>
-<script src="./dictionary_full.js"></script>
-<script src="./dictionary_simple.js"></script>
+<script src="./dictionary_detail.js"></script>
+<script src="./dictionary_brief.js"></script>
 <script src="./tytjs.js"></script>
 </html>
