--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
                     &nbsp;<span class="clk small" onclick="Prc.Pause()">Pause</span> &nbsp;<span class="clk small"
                         onclick="Prc.newText()">New-Text</span>
                     &nbsp;<span class="clk small" onclick="Prc.ClearData()">Clear-Data</span> &nbsp;<span class="clk small"
-                        onclick="Style.Switch(this);Prc.RefreshChart();">Theme[Calm]</span> &nbsp;<span class="clk small" onclick="Prc.voiceToggle(this);">[✘]Voice</span>
+                        onclick="Style.Switch(this);Prc.RefreshChart();">Theme[Calm]</span> &nbsp;<span class="clk small"
+                        onclick="Prc.voiceToggle(this);">[✘]Voice</span>
                     &nbsp;<span class="clk small" onclick="Prc.tipToggle(this);">[✘]Tip</span>.<span class="clk small"
                         onclick="Prc.dicToggle(this);">Brief</span> &nbsp;<span class="clk small" onclick="Prc.crosswordToggle(this);">[✘]Crossword</span>
-                    &nbsp;<span class="clk small" onclick="Prc.soundToggle(this);">[✔]Typing-Sound</span></div>
+                    &nbsp;<span class="clk small" onclick="Prc.soundToggle(this);">[✘]Typing-Sound</span></div>
             </div>
             <div id="state_details" class="row prc-state bd-l bd-r bd-u" hidden>
                 <div class="col-6 smallrow">
@@ -176,8 +177,8 @@
                         </div>
                         <div class="row">
                             <div class="col-3 text-right"><span>Smoothness:</span></div>
-                            <div class="col-8 text-left"><input type="range" min="0" max="1" step="0.001" defaultValu="0.05"
-                                    value="0.05" oninput="Prc.SetChart(null,this.value)"></div>
+                            <div class="col-8 text-left"><input type="range" min="1" max="1000" step="1" defaultValu="1000"
+                                    value="1" oninput="Prc.SetChart(null,this.value)"></div>
                         </div>
                         <div class="row">
                             <div class="col-3 text-right"><span>Select:</span></div>
@@ -225,4 +226,5 @@
 <script src="./dictionary_detail.js"></script>
 <script src="./dictionary_brief.js"></script>
 <script src="./tytjs.js"></script>
+
 </html>
