--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
                         onclick="Prc.newText()">New-Text</span>
                     &nbsp;<span class="clk small" onclick="Prc.ClearData()">Clear-Data</span> &nbsp;<span class="clk small"
                         onclick="Style.Switch(this);Prc.RefreshChart();">Theme[Calm]</span> &nbsp;<span class="clk small"
-                        onclick="Prc.voiceToggle(this);">[✘]Voice</span>
-                    &nbsp;<span class="clk small" onclick="Prc.tipToggle(this);">[✘]Tip</span>.<span class="clk small"
-                        onclick="Prc.dicToggle(this);">Brief</span> &nbsp;<span class="clk small" onclick="Prc.crosswordToggle(this);">[✘]Crossword</span>
-                    &nbsp;<span class="clk small" onclick="Prc.soundToggle(this);">[✘]Typing-Sound</span></div>
+                        onclick="Prc.voiceToggle(this);">[✖]Voice</span>
+                    &nbsp;<span class="clk small" onclick="Prc.tipToggle(this);">[✖]Tip</span>.<span class="clk small"
+                        onclick="Prc.dicToggle(this);">Brief</span> &nbsp;<span class="clk small" onclick="Prc.crosswordToggle(this);">[✖]Crossword</span>
+                    &nbsp;<span class="clk small" onclick="Prc.soundToggle(this);">[✖]Typing-Sound</span></div>
             </div>
             <div id="state_details" class="row prc-state bd-l bd-r bd-u" hidden>
                 <div class="col-6 smallrow">
@@ -116,9 +116,9 @@
                             type="range" class="mini" min="0" max="200" step="1" value="0" oninput="TY.Ranger(this,'missrangeval',function(val){Prc.RT_Currention=val/100;})">
                         &nbsp;<span id="missrangeval">0</span><span>%</span></div>
                     <div class="row" id="info_enginclude" onmouseover="Prc.info(this)"><span>English Include:&nbsp;</span><span
-                            class="clk checkbox" onclick="TY.Chooser(this,function(e){Prc.RT_RandomNumber = e;})">☐</span><span>Number&nbsp;</span><span
-                            class="clk checkbox" onclick="TY.Chooser(this,function(e){Prc.RT_RandomSymbol = e;})">☐</span><span>Symbol&nbsp;</span><span
-                            class="clk checkbox" onclick="TY.Chooser(this,function(e){Prc.RT_RandomFirstUpper = e;})">☐</span><span>Capital&nbsp;</span></div>
+                            class="clk" onclick="Prc.randomNumberToggle(this)">[✖]Number</span>&nbsp;<span
+                            class="clk" onclick="Prc.randomSymbolToggle(this)">[✖]Symbol</span>&nbsp;<span
+                            class="clk" onclick="Prc.randomCaptionToggle(this)">[✖]Capital</span>&nbsp;</div>
                     <div class="row" id="info_madeupmode" onmouseover="Prc.info(this)"><span>Made-up Mode:&nbsp;</span><span>[</span><span
                             onclick="Prc.setSpecialMode('Normal')" class="clk">Normal</span><span>|</span><span onclick="Prc.setSpecialMode('LeftHand')"
                             class="clk">LeftHand</span><span>|</span><span onclick="Prc.setSpecialMode('RightHand')"
