added auto-zoom for chart

--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@
             <div id="prc_chart" class="row prc-state">
                 <div class="col-12"><span>[<span class="clk" onclick="TY.Folder(this,'chartbox')">+</span>]Chart:</span>
                     <div id="chartbox" class="text-center" hidden><canvas id="chart" width="1050" height="200"></canvas>
+                        <!-- <div class="row">
+                            <span class="clk" onclick="Prc.test()">New</span>
+                        </div> -->
                         <div class="row">
                             <div class="col-3 text-right"> Item:</div>
                             <div class="col-8 text-left"><span>[</span><span onclick="Prc.SetChart('Speed')" class="clk">Speed(cpm)</span><span>|</span><span
