--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" id="HTML">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -26,19 +25,17 @@
         }
     </style>
 </head>
-
 <body>
     <div id="loading">Loading...</div>
-    <header>
-        TyT - Make you type faster.
-    </header>
+    <header></header>
+    <br><br><br>
     <div class="container">
         <div id="prc" class="row row-outer bd-d">
             <div id="prc_state" class="row prc-state bd-l bd-r bd-d bd-gradient-u">
                 <div class="col-2">
                     <div class="row"><span id="val_speed" class="large">0</span></div>
                     <div class="row small"><span>Speed</span>(<span id="val_speedunit" class="clk" onclick="Prc.speedToggle(this)"
-                            onmouseover="Prc.info(this)">cpm</span>)</div>
+                            onmouseout="Prc.info()" onmouseover="Prc.info(this)">cpm</span>)</div>
                     <div class="row small"><span>Avg/Top:</span>&nbsp;<span id="val_avgspeed">0</span>/<span id="val_topspeed">0</span></div>
                 </div>
                 <div class="col-2 bd-l bd-gradient-u">
@@ -79,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div id="prc_miss" class="row prc-state bd-l bd-r bd-d" onmouseover="Prc.info(this)">
+            <div id="prc_miss" class="row prc-state bd-l bd-r bd-d" onmouseout="Prc.info()" onmouseover="Prc.info(this)">
                 <div class="col-12">
                     <div><span>Miss[</span><span class="clk small" onclick="Prc.UpdateMissRank('all')">All</span><span>|</span><span
                             class="clk small" onclick="Prc.UpdateMissRank('letter')">ABC</span><span>|</span><span
@@ -101,45 +98,45 @@
             </div>
             <div id="state_details" class="row prc-state bd-l bd-r bd-u" hidden>
                 <div class="col-6 smallrow">
-                    <div class="row" id="info_mode" onmouseover="Prc.info(this)"><span><span>Mode:&nbsp;</span><span>[</span><span
+                    <div class="row" id="info_mode" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span><span>Mode:&nbsp;</span><span>[</span><span
                                 onclick="Prc.setTextMode('English')" class="clk">English</span><span>|</span><span
                                 onclick="Prc.setTextMode('Pinyin')" class="clk">Pinyin</span><span>|</span><span
                                 onclick="Prc.setTextMode('Made-up')" class="clk">Made-up</span><span>]</span></span></div>
-                    <div class="row" id="info_words" onmouseover="Prc.info(this)"><span>Words(<span class="clk" onclick="wordsrange.value=200;wordsrange.oninput()">Default</span>):&nbsp;</span><input
+                    <div class="row" id="info_words" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span>Words(<span class="clk" onclick="wordsrange.value=200;wordsrange.oninput()">Default</span>):&nbsp;</span><input
                             id="wordsrange" type="range" class="mini" min="1" max="1000" step="1" value="200" oninput="TY.Ranger(this,'wordsrangeval',function(val){Prc.RT_Length=val;})">
                         &nbsp;<span id="wordsrangeval">200</span></div>
-                    <div class="row" id="info_style" onmouseover="Prc.info(this)"><span>Style(<span class="clk" onclick="stylerange.value=1;stylerange.oninput()">Default</span>):</span>
+                    <div class="row" id="info_style" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span>Style(<span class="clk" onclick="stylerange.value=1;stylerange.oninput()">Default</span>):</span>
                         &nbsp;<input id="stylerange" type="range" min="1" max="6" step="1" value="1" oninput="TY.Ranger(this,'stylerangeval',Prc.charStyleToggle)"
                             class="mini"> &nbsp;<span id="stylerangeval">1</span></div>
-                    <div class="row" id="info_currention" onmouseover="Prc.info(this)"><span>Currention(<span class="clk"
+                    <div class="row" id="info_currention" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span>Currention(<span class="clk"
                                 onclick="missrange.value=0;missrange.oninput()">Default</span>):&nbsp;</span><input id="missrange"
                             type="range" class="mini" min="0" max="200" step="1" value="0" oninput="TY.Ranger(this,'missrangeval',function(val){Prc.RT_Currention=val/100;})">
                         &nbsp;<span id="missrangeval">0</span><span>%</span></div>
-                    <div class="row" id="info_enginclude" onmouseover="Prc.info(this)"><span>English Include:&nbsp;</span><span
+                    <div class="row" id="info_enginclude" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span>English Include:&nbsp;</span><span
                             class="clk" onclick="Prc.randomNumberToggle(this)">[✖]Number</span>&nbsp;<span class="clk"
                             onclick="Prc.randomSymbolToggle(this)">[✖]Symbol</span>&nbsp;<span class="clk" onclick="Prc.randomCaptionToggle(this)">[✖]Capital</span>&nbsp;</div>
-                    <div class="row" id="info_madeupmode" onmouseover="Prc.info(this)"><span>Made-up Mode:&nbsp;</span><span>[</span><span
+                    <div class="row" id="info_madeupmode" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span>Made-up Mode:&nbsp;</span><span>[</span><span
                             onclick="Prc.setSpecialMode('Normal')" class="clk">Normal</span><span>|</span><span onclick="Prc.setSpecialMode('LeftHand')"
                             class="clk">LeftHand</span><span>|</span><span onclick="Prc.setSpecialMode('RightHand')"
                             class="clk">RightHand</span><span>|</span><span onclick="Prc.setSpecialMode('InTurn')"
                             class="clk">InTurn</span><span>]</span></div>
-                    <div class="row" id="info_madeupminwordlen" onmouseover="Prc.info(this)"><span>Made-up Minimal
+                    <div class="row" id="info_madeupminwordlen" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span>Made-up Minimal
                             Word Length:</span> &nbsp;<input id="specialwordlengthrange" type="range" min="0" max="100"
                             step="1" value="0" oninput="TY.Ranger(this,'specialwordlengthrangeval',Prc.setSpecialWordLength)"
                             class="mini"> &nbsp;<span id="specialwordlengthrangeval">0</span></div>
-                    <div class="row" id="info_leftcharset" onmouseover="Prc.info(this)"><span>LeftHand Charset(<span
+                    <div class="row" id="info_leftcharset" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span>LeftHand Charset(<span
                                 onclick="prc_lefthandcharset.value='qwertasdfgzxcv';lefthandcharsetsave.onclick()"
                                 class="clk">Default</span>):</span>&nbsp;<input id="prc_lefthandcharset" type="text"
                             maxlength="50" value="qwertasdfgzxcv" style="width:10em"> &nbsp;<span id="lefthandcharsetsave"
                             class="clk" onclick="Prc.WordAssembler.setLefthand(prc_lefthandcharset.value)" title="Set this text as lefthand character set,others will be the righthand character set. Leave nothing for default.">Save</span></div>
                 </div>
-                <div class="col-4 smallrow bd-l" id="info_customtext" onmouseover="Prc.info(this)">
+                <div class="col-4 smallrow bd-l" id="info_customtext" onmouseout="Prc.info()" onmouseover="Prc.info(this)">
                     <div class="row"><textarea id="prc_txtsource"></textarea>
                         <div class="col-12 text-center"><span class="clk" onclick="Prc.setTextSource('prc_txtsource')"
                                 title="Set this text as practise text.">Use This Text(auto-cycle)</span></div>
                     </div>
                 </div>
-                <div class="col-2 smallrow bd-l" id="info" onmouseover="Prc.info(this)">
+                <div class="col-2 smallrow bd-l" id="info" onmouseout="Prc.info()" onmouseover="Prc.info(this)">
                     <div class="row text-right">
                         <div class="col-12 text-center bd-d"> Information</div>
                     </div>
@@ -220,13 +217,10 @@
         <audio id="sounder0" src="typesound.ogg"></audio>
     </div>
     <br><br>
-    <footer>
-        <a href="http://blackkitty.org">TyT(c)BLACKKITTY.ORG</a>
-    </footer>
+    <footer></footer>
 </body>
 <script src="./wordlist.js"></script>
 <script src="./dictionary_detail.js"></script>
 <script src="./dictionary_brief.js"></script>
 <script src="./tytjs.js"></script>
-
 </html>
