--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             Charset(<span onclick="prc_lefthandcharset.value='qwertasdfgzxcv';lefthandcharsetsave.onclick()"
                                 class="clk">Default</span>):</span>&nbsp;<input id="prc_lefthandcharset" type="text"
                             maxlength="50" value="qwertasdfgzxcv" style="width:10em"> &nbsp;<span id="lefthandcharsetsave"
-                            class="clk" onclick="Prc.WordAssembler.setLefthand(prc_lefthandcharset.value)" title="Set this text as lefthand character set,others will be the righthand character set. Leave nothing for default.">Save</span>
+                            class="clk" onclick="Prc.WordAssembler.setLefthand(prc_lefthandcharset.value)">Save</span>
                     </div>
                     <div class="row" id="info_madeupminwordlen" onmouseout="Prc.info()" onmouseover="Prc.info(this)"><span>Made-up
                             Minimal
